syntax = "proto3";

option java_package = "com.example.databaseserver.generated";
option java_multiple_files = true;

service RepresentativeService {
  rpc CreateRepresentative (CreateRepRequest) returns (RepresentativeResponse);
}
message CreateRepRequest {
  string name = 1;
  string email = 2;
  string password_hash = 3;
  string position = 4;
}
message RepresentativeResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string position = 4;
}